<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.spntrivia.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_triviaFragment"
            app:destination="@id/navigation_trivia" />
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.spntrivia.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.spntrivia.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.spntrivia.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_trivia"
        android:name="com.example.spntrivia.ui.trivia.TriviaFragment"
        android:label="@string/title_trivia"
        tools:layout="@layout/fragment_trivia">
        <action
            android:id="@+id/action_triviaFragment_to_endQuizFragment"
            app:destination="@id/navigation_end_quiz" />
    </fragment>

    <fragment
        android:id="@+id/navigation_end_quiz"
        android:name="com.example.spntrivia.ui.endQuiz.EndQuizFragment"
        android:label="@string/title_end_quiz"
        tools:layout="@layout/fragment_end_quiz">
        <action
            android:id="@+id/action_endQuizFragment_to_homeFragment"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_endQuizFragment_to_profileFragment"
            app:destination="@id/navigation_profile" />
    </fragment>

</navigation>